[package]
name = "rust_vulkan"
version = "0.1.0"
authors = ["Jonathan Cohlin <jonathan.cohlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = "0.6"
chrono = "0.4"
ash = "0.31.0"
glfw = "0.41.0"
